--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8"> 
-    <link rel="shortcut icon" type="image/x-icon" href="image/image.png" />
-    <link rel="stylesheet" href="css/styles.css"/>
-    <script type="text/javascript" src="js/paint.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="Paint App/image/image.png" />
+    <link rel="stylesheet" href="Paint App/css/styles.css"/>
+    <script type="text/javascript" src="Paint App/js/paint.js"></script>
     <title> Sample Paint App </title>
     <h1 class="defaultText">Simple Paint App</h1>
 </head>
