--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8"> 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/image.png" />
-    <link rel="stylesheet" href="styles/styles.css"/>
-    <script type="text/javascript" src="scripts/paint.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="./Paint/assets/image.png" />
+    <link rel="stylesheet" href="./Paint/styles/styles.css"/>
+    <script type="text/javascript" src="./Paint/scripts/paint.js"></script>
     <title> Sample Paint App </title>
     <h1 class="defaultText">Simple Paint App</h1>
 </head>
